; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_evergreen.c_dce4_wait_for_vblank.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_evergreen.c_dce4_wait_for_vblank.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

@EVERGREEN_CRTC_CONTROL = common dso_local global i64 0, align 8
@crtc_offsets = common dso_local global i64* null, align 8
@EVERGREEN_CRTC_MASTER_EN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dce4_wait_for_vblank(%struct.radeon_device* %0, i32 %1) #0 {
  %3 = alloca %struct.radeon_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %8 = getelementptr inbounds %struct.radeon_device, %struct.radeon_device* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp sge i32 %6, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %64

12:                                               ; preds = %2
  %13 = load i64, i64* @EVERGREEN_CRTC_CONTROL, align 8
  %14 = load i64*, i64** @crtc_offsets, align 8
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i64, i64* %14, i64 %16
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %13, %18
  %20 = call i32 @RREG32(i64 %19)
  %21 = load i32, i32* @EVERGREEN_CRTC_MASTER_EN, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %12
  br label %64

25:                                               ; preds = %12
  br label %26

26:                                               ; preds = %43, %25
  %27 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %28 = load i32, i32* %4, align 4
  %29 = call i64 @dce4_is_in_vblank(%struct.radeon_device* %27, i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %44

31:                                               ; preds = %26
  %32 = load i32, i32* %5, align 4
  %33 = add i32 %32, 1
  store i32 %33, i32* %5, align 4
  %34 = urem i32 %32, 100
  %35 = icmp eq i32 %34, 0
  br i1 %35, label %36, label %43

36:                                               ; preds = %31
  %37 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %38 = load i32, i32* %4, align 4
  %39 = call i32 @dce4_is_counter_moving(%struct.radeon_device* %37, i32 %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %42, label %41

41:                                               ; preds = %36
  br label %44

42:                                               ; preds = %36
  br label %43

43:                                               ; preds = %42, %31
  br label %26

44:                                               ; preds = %41, %26
  br label %45

45:                                               ; preds = %63, %44
  %46 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %47 = load i32, i32* %4, align 4
  %48 = call i64 @dce4_is_in_vblank(%struct.radeon_device* %46, i32 %47)
  %49 = icmp ne i64 %48, 0
  %50 = xor i1 %49, true
  br i1 %50, label %51, label %64

51:                                               ; preds = %45
  %52 = load i32, i32* %5, align 4
  %53 = add i32 %52, 1
  store i32 %53, i32* %5, align 4
  %54 = urem i32 %52, 100
  %55 = icmp eq i32 %54, 0
  br i1 %55, label %56, label %63

56:                                               ; preds = %51
  %57 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %58 = load i32, i32* %4, align 4
  %59 = call i32 @dce4_is_counter_moving(%struct.radeon_device* %57, i32 %58)
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %62, label %61

61:                                               ; preds = %56
  br label %64

62:                                               ; preds = %56
  br label %63

63:                                               ; preds = %62, %51
  br label %45

64:                                               ; preds = %11, %24, %61, %45
  ret void
}

declare dso_local i32 @RREG32(i64) #1

declare dso_local i64 @dce4_is_in_vblank(%struct.radeon_device*, i32) #1

declare dso_local i32 @dce4_is_counter_moving(%struct.radeon_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
